Trying to fix font size on mobile

--- a/bitcoin/style.css
+++ b/bitcoin/style.css
@@ -43,6 +43,12 @@ html {
   background-color: var(--color-red);
 }
 
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 64%;
+  }
+}
+
 body {
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
